--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
         <artifactId>spring-security-crypto</artifactId>
     </dependency>-->
     
+    <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+    
     
 	</dependencies>
 
