--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,13 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 #security 로그 남기기 설정 
 logging.level.org.springframework.security=DEBUG
+
+#mailService
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=jju50203@gmail.com
+spring.mail.password=qbyh qatw ckzg mtlu
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.smtp.connectiontimeout = 180000
