--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,8 +26,9 @@ logging.level.org.springframework.security=DEBUG
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=jju50203@gmail.com
-spring.mail.password=qbyh qatw ckzg mtlu
+spring.mail.password=bihn hmep wyyk ttcg
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.debug=true
+#spring.mail.properties.mail.debug=true
 spring.mail.properties.mail.smtp.connectiontimeout = 180000
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
