--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,8 +25,8 @@ logging.level.org.springframework.security=DEBUG
 #mailService
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=jju50203@gmail.com
-spring.mail.password=bihn hmep wyyk ttcg
+spring.mail.username=@gmail.com
+spring.mail.password=
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.debug=true
