--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,6 @@ spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.debug=true
 spring.mail.properties.mail.smtp.connectiontimeout = 180000
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
